test/src/e2e_vm_tests/snapshots/test__e2e_vm_tests__harness__json_abi-103.snap
---
source: test/src/e2e_vm_tests/harness.rs
expression: output_contents
---
[
  {
    "inputs": [],
    "name": "test_function",
    "outputs": [
      {
        "components": null,
        "name": "",
        "type": "bool",
        "typeArguments": null
      }
    ],
    "type": "function"
  }
]
