test/src/e2e_vm_tests/snapshots/test__e2e_vm_tests__harness__json_abi-112.snap
---
source: test/src/e2e_vm_tests/harness.rs
expression: output_contents
---
[
  {
    "inputs": [
      {
        "components": [
          {
            "components": [
              {
                "components": null,
                "name": "__array_element",
                "type": "b256",
                "typeArguments": null
              }
            ],
            "name": "bim",
            "type": "[b256; 3]",
            "typeArguments": null
          },
          {
            "components": [
              {
                "components": null,
                "name": "Foo",
                "type": "u64",
                "typeArguments": null
              },
              {
                "components": null,
                "name": "Bar",
                "type": "bool",
                "typeArguments": null
              }
            ],
            "name": "bam",
            "type": "enum MyEnum",
            "typeArguments": [
              {
                "components": null,
                "name": "V",
                "type": "u64",
                "typeArguments": null
              }
            ]
          }
        ],
        "name": "arg1",
        "type": "struct MyStruct",
        "typeArguments": [
          {
            "components": [
              {
                "components": null,
                "name": "__array_element",
                "type": "b256",
                "typeArguments": null
              }
            ],
            "name": "T",
            "type": "[b256; 3]",
            "typeArguments": null
          },
          {
            "components": null,
            "name": "U",
            "type": "u8",
            "typeArguments": null
          }
        ]
      },
      {
        "components": [
          {
            "components": [
              {
                "components": null,
                "name": "bim",
                "type": "u64",
                "typeArguments": null
              },
              {
                "components": [
                  {
                    "components": null,
                    "name": "Foo",
                    "type": "u64",
                    "typeArguments": null
                  },
                  {
                    "components": null,
                    "name": "Bar",
                    "type": "bool",
                    "typeArguments": null
                  }
                ],
                "name": "bam",
                "type": "enum MyEnum",
                "typeArguments": [
                  {
                    "components": null,
                    "name": "V",
                    "type": "u64",
                    "typeArguments": null
                  }
                ]
              }
            ],
            "name": "__array_element",
            "type": "struct MyStruct",
            "typeArguments": [
              {
                "components": null,
                "name": "T",
                "type": "u64",
                "typeArguments": null
              },
              {
                "components": null,
                "name": "U",
                "type": "bool",
                "typeArguments": null
              }
            ]
          }
        ],
        "name": "arg2",
        "type": "[struct MyStruct; 4]",
        "typeArguments": null
      },
      {
        "components": [
          {
            "components": null,
            "name": "__tuple_element",
            "type": "str[5]",
            "typeArguments": null
          },
          {
            "components": null,
            "name": "__tuple_element",
            "type": "bool",
            "typeArguments": null
          }
        ],
        "name": "arg3",
        "type": "(str[5], bool)",
        "typeArguments": null
      },
      {
        "components": [
          {
            "components": null,
            "name": "bom",
            "type": "u64",
            "typeArguments": null
          }
        ],
        "name": "arg4",
        "type": "struct MyOtherStruct",
        "typeArguments": null
      }
    ],
    "name": "complex_function",
    "outputs": [
      {
        "components": null,
        "name": "",
        "type": "str[6]",
        "typeArguments": null
      }
    ],
    "type": "function"
  },
  {
    "inputs": [
      {
        "components": [
          {
            "components": [
              {
                "components": null,
                "name": "__array_element",
                "type": "u8",
                "typeArguments": null
              }
            ],
            "name": "tim",
            "type": "[u8; 3]",
            "typeArguments": null
          },
          {
            "components": [
              {
                "components": [
                  {
                    "components": null,
                    "name": "bim",
                    "type": "u8",
                    "typeArguments": null
                  },
                  {
                    "components": [
                      {
                        "components": null,
                        "name": "Foo",
                        "type": "u64",
                        "typeArguments": null
                      },
                      {
                        "components": null,
                        "name": "Bar",
                        "type": "bool",
                        "typeArguments": null
                      }
                    ],
                    "name": "bam",
                    "type": "enum MyEnum",
                    "typeArguments": [
                      {
                        "components": null,
                        "name": "V",
                        "type": "u64",
                        "typeArguments": null
                      }
                    ]
                  }
                ],
                "name": "__array_element",
                "type": "struct MyStruct",
                "typeArguments": [
                  {
                    "components": null,
                    "name": "T",
                    "type": "u8",
                    "typeArguments": null
                  },
                  {
                    "components": null,
                    "name": "U",
                    "type": "u16",
                    "typeArguments": null
                  }
                ]
              }
            ],
            "name": "tam",
            "type": "[struct MyStruct; 5]",
            "typeArguments": null
          }
        ],
        "name": "arg",
        "type": "struct MyArrayStruct",
        "typeArguments": [
          {
            "components": null,
            "name": "V",
            "type": "u8",
            "typeArguments": null
          },
          {
            "components": null,
            "name": "W",
            "type": "u16",
            "typeArguments": null
          }
        ]
      }
    ],
    "name": "take_generic_array",
    "outputs": [
      {
        "components": null,
        "name": "",
        "type": "u64",
        "typeArguments": null
      }
    ],
    "type": "function"
  }
]
