test/src/e2e_vm_tests/snapshots/test__e2e_vm_tests__harness__json_abi-113.snap
---
source: test/src/e2e_vm_tests/harness.rs
expression: output_contents
---
[
  {
    "inputs": [
      {
        "components": null,
        "name": "a",
        "type": "u64",
        "typeArguments": null
      },
      {
        "components": null,
        "name": "b",
        "type": "u64",
        "typeArguments": null
      }
    ],
    "name": "multiply_u64",
    "outputs": [
      {
        "components": [
          {
            "components": null,
            "name": "__tuple_element",
            "type": "u64",
            "typeArguments": null
          },
          {
            "components": null,
            "name": "__tuple_element",
            "type": "u64",
            "typeArguments": null
          }
        ],
        "name": "",
        "type": "(u64, u64)",
        "typeArguments": null
      }
    ],
    "type": "function"
  }
]
