test/src/e2e_vm_tests/snapshots/test__e2e_vm_tests__harness__json_abi-114.snap
---
source: test/src/e2e_vm_tests/harness.rs
expression: output_contents
---
[
  {
    "inputs": [
      {
        "components": null,
        "name": "storage_key",
        "type": "b256",
        "typeArguments": null
      }
    ],
    "name": "get_u64",
    "outputs": [
      {
        "components": null,
        "name": "",
        "type": "u64",
        "typeArguments": null
      }
    ],
    "type": "function"
  },
  {
    "inputs": [
      {
        "components": null,
        "name": "key",
        "type": "b256",
        "typeArguments": null
      },
      {
        "components": null,
        "name": "value",
        "type": "u64",
        "typeArguments": null
      }
    ],
    "name": "store_u64",
    "outputs": [
      {
        "components": [],
        "name": "",
        "type": "()",
        "typeArguments": null
      }
    ],
    "type": "function"
  }
]
