test/src/e2e_vm_tests/snapshots/test__e2e_vm_tests__harness__json_abi-115.snap
---
source: test/src/e2e_vm_tests/harness.rs
expression: output_contents
---
[
  {
    "inputs": [],
    "name": "from_f1",
    "outputs": [
      {
        "components": null,
        "name": "",
        "type": "b256",
        "typeArguments": null
      }
    ],
    "type": "function"
  },
  {
    "inputs": [],
    "name": "from_f2",
    "outputs": [
      {
        "components": null,
        "name": "",
        "type": "b256",
        "typeArguments": null
      }
    ],
    "type": "function"
  },
  {
    "inputs": [],
    "name": "from_f3",
    "outputs": [
      {
        "components": null,
        "name": "",
        "type": "b256",
        "typeArguments": null
      }
    ],
    "type": "function"
  },
  {
    "inputs": [],
    "name": "from_f4",
    "outputs": [
      {
        "components": null,
        "name": "",
        "type": "b256",
        "typeArguments": null
      }
    ],
    "type": "function"
  },
  {
    "inputs": [],
    "name": "from_callers",
    "outputs": [
      {
        "components": [
          {
            "components": null,
            "name": "__tuple_element",
            "type": "b256",
            "typeArguments": null
          },
          {
            "components": null,
            "name": "__tuple_element",
            "type": "b256",
            "typeArguments": null
          },
          {
            "components": null,
            "name": "__tuple_element",
            "type": "b256",
            "typeArguments": null
          },
          {
            "components": null,
            "name": "__tuple_element",
            "type": "b256",
            "typeArguments": null
          }
        ],
        "name": "",
        "type": "(b256, b256, b256, b256)",
        "typeArguments": null
      }
    ],
    "type": "function"
  }
]
