test/src/e2e_vm_tests/snapshots/test__e2e_vm_tests__harness__json_abi-116.snap
---
source: test/src/e2e_vm_tests/harness.rs
expression: output_contents
---
[
  {
    "inputs": [
      {
        "components": [
          {
            "components": [
              {
                "components": null,
                "name": "age",
                "type": "u64",
                "typeArguments": null
              }
            ],
            "name": "__tuple_element",
            "type": "struct Person",
            "typeArguments": null
          },
          {
            "components": null,
            "name": "__tuple_element",
            "type": "u64",
            "typeArguments": null
          }
        ],
        "name": "param",
        "type": "(struct Person, u64)",
        "typeArguments": null
      }
    ],
    "name": "bug1",
    "outputs": [
      {
        "components": null,
        "name": "",
        "type": "bool",
        "typeArguments": null
      }
    ],
    "type": "function"
  },
  {
    "inputs": [
      {
        "components": [
          {
            "components": [
              {
                "components": [],
                "name": "Earth",
                "type": "()",
                "typeArguments": null
              }
            ],
            "name": "__tuple_element",
            "type": "enum Location",
            "typeArguments": null
          },
          {
            "components": null,
            "name": "__tuple_element",
            "type": "u64",
            "typeArguments": null
          }
        ],
        "name": "param",
        "type": "(enum Location, u64)",
        "typeArguments": null
      }
    ],
    "name": "bug2",
    "outputs": [
      {
        "components": null,
        "name": "",
        "type": "bool",
        "typeArguments": null
      }
    ],
    "type": "function"
  }
]
