test/src/e2e_vm_tests/snapshots/test__e2e_vm_tests__harness__json_abi-117.snap
---
source: test/src/e2e_vm_tests/harness.rs
expression: output_contents
---
[
  {
    "inputs": [],
    "name": "get_id",
    "outputs": [
      {
        "components": [
          {
            "components": null,
            "name": "value",
            "type": "b256",
            "typeArguments": null
          }
        ],
        "name": "",
        "type": "struct ContractId",
        "typeArguments": null
      }
    ],
    "type": "function"
  },
  {
    "inputs": [
      {
        "components": [
          {
            "components": null,
            "name": "value",
            "type": "b256",
            "typeArguments": null
          }
        ],
        "name": "asset_id",
        "type": "struct ContractId",
        "typeArguments": null
      }
    ],
    "name": "get_this_balance",
    "outputs": [
      {
        "components": null,
        "name": "",
        "type": "u64",
        "typeArguments": null
      }
    ],
    "type": "function"
  },
  {
    "inputs": [
      {
        "components": [
          {
            "components": null,
            "name": "value",
            "type": "b256",
            "typeArguments": null
          }
        ],
        "name": "asset_id",
        "type": "struct ContractId",
        "typeArguments": null
      },
      {
        "components": [
          {
            "components": null,
            "name": "value",
            "type": "b256",
            "typeArguments": null
          }
        ],
        "name": "cid",
        "type": "struct ContractId",
        "typeArguments": null
      }
    ],
    "name": "get_balance_of_contract",
    "outputs": [
      {
        "components": null,
        "name": "",
        "type": "u64",
        "typeArguments": null
      }
    ],
    "type": "function"
  },
  {
    "inputs": [],
    "name": "get_amount",
    "outputs": [
      {
        "components": null,
        "name": "",
        "type": "u64",
        "typeArguments": null
      }
    ],
    "type": "function"
  },
  {
    "inputs": [],
    "name": "get_asset_id",
    "outputs": [
      {
        "components": [
          {
            "components": null,
            "name": "value",
            "type": "b256",
            "typeArguments": null
          }
        ],
        "name": "",
        "type": "struct ContractId",
        "typeArguments": null
      }
    ],
    "type": "function"
  },
  {
    "inputs": [],
    "name": "get_gas",
    "outputs": [
      {
        "components": null,
        "name": "",
        "type": "u64",
        "typeArguments": null
      }
    ],
    "type": "function"
  },
  {
    "inputs": [],
    "name": "get_global_gas",
    "outputs": [
      {
        "components": null,
        "name": "",
        "type": "u64",
        "typeArguments": null
      }
    ],
    "type": "function"
  }
]
