test/src/e2e_vm_tests/snapshots/test__e2e_vm_tests__harness__json_abi-121.snap
---
source: test/src/e2e_vm_tests/harness.rs
expression: output_contents
---
[
  {
    "inputs": [],
    "name": "returns_gm_one",
    "outputs": [
      {
        "components": null,
        "name": "",
        "type": "bool",
        "typeArguments": null
      }
    ],
    "type": "function"
  }
]
